Tried to fix chrome spacing issue 2

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,6 +5,7 @@
   margin: 0px;
   padding: 0px;
   overflow-x: hidden;
+  overflow-y: hidden;
   position: relative;
 }
 
@@ -40,16 +41,16 @@
 }
 
 #landingPage {
-  position: fixed;
-  left: 0px;
-  top: 0px;
-  width: 100vw;
-  height: 100vh;
+  position:relative;
+  margin-left: -5vw;
+  margin-top: -5vh;
+  width: 110vw;
+  height: 110vh;
   display: flex;
   align-items: center;
   justify-content: center;
   transition: --c1 1s, --c2 4s;
-  background: radial-gradient(var(--c1), var(--c2));
+  //background: radial-gradient(var(--c1), var(--c2));
   #cover {
     width: 100%;
     height: 100%;
